Fixed #368: Mode selection drop down not fully visible on small screen

--- a/src/css/jsoneditor.css
+++ b/src/css/jsoneditor.css
@@ -185,7 +185,6 @@ div.jsoneditor {
 
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
   padding: 0;
   line-height: 100%;
